--- a/account.html
+++ b/account.html
@@ -258,7 +258,7 @@
   <div class="nav-bar">
     <a href="index.html" class="active"><i class="fas fa-home"></i><span>Home</span></a>
     <a href="start.html"><i class="fas fa-bolt"></i><span>Mining</span></a>
-    <a href="pramotion.html"><i class="fas fa-users"></i><span>Promotion</span></a>
+    <a href="promotion.html"><i class="fas fa-users"></i><span>Promotion</span></a>
     <a href="wallet.html"><i class="fas fa-wallet"></i><span>Wallet</span></a>
     <a href="account.html"><i class="fas fa-user"></i><span>Account</span></a>
   </div>
