--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
     }
   });
 </script>
+  <link rel="preload" href="/fonts/font.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="prefetch" href="/next-page.html" />
+
 
 </body>
 </html>
