--- a/index.html
+++ b/index.html
@@ -1,274 +1,397 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <title>ID to ID Transfer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TrustDollar – BTC Mining</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
-    * { box-sizing: border-box; }
-
     body {
-      margin: 0;
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background: linear-gradient(135deg, #8B0000, #FFD700);
       font-family: 'Segoe UI', sans-serif;
-      background: #0a0a0a;
-      color: #fff;
-      padding-bottom: 100px;
-      overflow-x: hidden;
+      padding: 15px;
+      box-sizing: border-box;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
     }
+    body.loaded { opacity: 1; }
 
-    h1, h2 {
-      text-align: center;
-      color: #00ffff;
-      margin-top: clamp(20px, 5vw, 40px);
-      text-shadow: 0 0 10px #00ffff88;
-      font-size: clamp(22px, 5vw, 34px);
+    /* Loader */
+    #loader {
+      position: fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: linear-gradient(135deg, #8B0000, #FFD700);
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      z-index: 10000;
     }
-
-    .section {
-      width: 90%;
-      max-width: 950px;
-      margin: 30px auto;
-      padding: clamp(16px, 4vw, 30px);
-      background: #1a1a1a;
-      border-radius: 20px;
-      border: 1px solid #1047db;
-      box-shadow: 0 0 20px #00fff740;
-      position: relative;
-    }
-
-    .glow {
-      color: #00ffcc;
-      font-weight: bold;
-      text-shadow: 0 0 8px #00ffccaa;
-    }
-
-    .section p {
-      font-size: clamp(14px, 4vw, 17px);
-      line-height: 1.7;
-      color: #ccc;
-      text-align: center;
-    }
-
-    .scene {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: flex-start;
-      margin-bottom: 10px;
-      gap: 14px;
-    }
-
-    .miner {
-      width: 90px;
-      height: 90px;
-      background: #111;
-      border-radius: 10px;
-      box-shadow: 0 0 20px #00ffff80;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .fan {
-      width: 80%;
-      height: 80%;
-      background: radial-gradient(#00ffff 40%, transparent 41%);
+    .loader-spinner {
+      border: 6px solid rgba(255,215,0,0.3);
+      border-top: 6px solid gold;
+      border-right: 6px solid red;
       border-radius: 50%;
-      animation: rotate 2s linear infinite;
-    }
-
-    @keyframes rotate {
-      100% { transform: rotate(360deg); }
-    }
-
-    .coin {
-      width: 24px;
-      height: 24px;
-      background: gold;
-      border-radius: 50%;
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      animation: drop 2s linear infinite;
-    }
-
-    @keyframes drop {
-      0% { top: -30px; opacity: 0; }
-      20% { opacity: 1; }
-      80% { top: 70px; opacity: 1; }
-      100% { top: 80px; opacity: 0; }
-    }
-
-    .chart {
-      width: 160px;
-      height: 80px;
-      background: linear-gradient(to right, #00ffff22, #00ffff11);
-      border-radius: 10px;
-      padding: 6px;
-      display: flex;
-      align-items: flex-end;
-      gap: 5px;
-      box-shadow: 0 0 10px #00ffff33;
-    }
-
-    .bar {
-      flex: 1;
-      background: #00ffff;
-      border-radius: 5px;
-      height: 40%;
-      animation: fluctuate 2s ease-in-out infinite alternate;
-    }
-
-    .bar:nth-child(2) { animation-delay: 0.3s; }
-    .bar:nth-child(3) { animation-delay: 0.6s; }
-    .bar:nth-child(4) { animation-delay: 0.9s; }
-
-    @keyframes fluctuate {
-      0% { height: 30%; }
-      100% { height: 80%; }
-    }
-
-    .device {
-      width: 110px;
+      width: 60px;
       height: 60px;
-      background: #00aaff22;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
+
+    .box {
+      background: rgba(255, 0, 0, 0.1);
+      border: 2px solid rgba(255, 215, 0, 0.4);
+      border-radius: 18px;
+      padding: 25px 20px;
+      width: 100%;
+      max-width: 360px;
+      text-align: center;
+    }
+    h2 { margin-bottom: 15px; font-size: 22px; color: gold; }
+    p { margin: 5px 0; color: #fff; font-size: 14px; word-wrap: break-word; }
+
+    #currentWallet {
+      margin: 10px auto 20px auto;
+      padding: 12px;
       border-radius: 12px;
-      box-shadow: inset 0 0 10px #00ffff44;
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid rgba(255,215,0,0.5);
+      color: gold;
+      font-weight: bold;
+      font-size: 16px;
+      width: 90%;
+      max-width: 300px;
     }
 
-    .cta {
-      display: inline-block;
-      margin-top: 20px;
-      background: #00ffff;
+    input, button {
+      width: 90%;
+      max-width: 300px;
+      padding: 12px;
+      margin: 10px auto;
+      border-radius: 10px;
+      border: none;
+      font-size: 14px;
+      outline: none;
+      display: block;
+      box-sizing: border-box;
+    }
+    input {
+      background: rgba(0, 0, 0, 0.7);
+      color: gold;
+      border: 1px solid rgba(255,215,0,0.4);
+      text-align: center;
+    }
+    input::placeholder { color: rgba(255,215,0,0.6); }
+
+    button {
+      background: linear-gradient(90deg, red, gold);
       color: #000;
       font-weight: bold;
-      padding: 14px 28px;
-      border-radius: 12px;
-      text-decoration: none;
-      font-size: 16px;
-      box-shadow: 0 0 15px #00ffff90;
-      transition: transform 0.2s ease;
+      cursor: pointer;
+      transition: 0.3s;
     }
+    button:hover { transform: scale(1.05); }
 
-    .cta:hover {
-      transform: scale(1.05);
-    }
-
-    .bottom-nav {
+    .popup {
       position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #000;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      border-top: 1px solid #222;
-      z-index: 999;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,0.85);
+      padding: 15px 25px;
+      border-radius: 12px;
+      display: none;
+      font-size: 15px;
+      z-index: 9999;
+      text-align:center;
+      color:#fff;
+      border: 2px solid gold;
+      max-width: 90%;
+      word-wrap: break-word;
+    }
+    .popup.success { background: rgba(0,128,0,0.85); }
+    .popup.error { background: rgba(139,0,0,0.85); }
+
+    .scanner-popup {
+      position: fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      background: rgba(0,0,0,0.85);
+      display:none;
+      justify-content:center;
+      align-items:center;
+      z-index:10001;
+      flex-direction:column;
+    }
+    .scanner-box {
+      width:280px;
+      height:280px;
+      border:3px solid gold;
+      border-radius:12px;
+      position:relative;
+      overflow:hidden;
+    }
+    #scan-line {
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:3px;
+      background:red;
+      animation: scanMove 2s linear infinite;
+    }
+    @keyframes scanMove {
+      0% { top:0; }
+      50% { top: calc(100% - 3px); }
+      100% { top:0; }
+    }
+    .close-scan {
+      margin-top:15px;
+      padding:8px 20px;
+      border:none;
+      border-radius:8px;
+      cursor:pointer;
+      background:red;
+      color:#fff;
+      font-weight:bold;
     }
 
-    .bottom-nav a {
-      text-align: center;
-      color: #ccc;
-      font-size: 12px;
-      text-decoration: none;
-    }
-
-    .bottom-nav i {
-      font-size: 20px;
-      display: block;
-      margin: 0 auto 5px;
-      color: inherit;
-    }
-
-    .bottom-nav .active {
-      color: #ffd700;
+    @media (max-width: 420px) {
+      .box { max-width: 95%; padding: 20px 15px; }
+      input, button { width: 100%; max-width: 100%; font-size: 13px; padding: 10px; }
+      #currentWallet { font-size: 14px; }
     }
   </style>
 </head>
 <body>
+  <!-- Loader -->
+  <div id="loader"><div class="loader-spinner"></div></div>
 
-<!-- Mining Animation Section -->
-<div class="section">
-  <div class="scene">
-    <div class="miner">
-      <div class="fan"></div>
-      <div class="coin"></div>
+  <div class="box">
+    <h2>ID to ID Transfer</h2>
+    <p id="currentUserEmail"></p>
+    <p id="currentWallet"></p>
+    <input type="email" id="receiverEmail" placeholder="Receiver Gmail ID"/>
+    <button id="checkBtn">Check Receiver</button>
+    <input type="number" id="amount" placeholder="Enter Amount"/>
+    <button id="sendBtn">Send Money</button>
+
+    <div id="qrBox">
+      <h3 style="color:gold; margin:10px 0;">Your QR Code</h3>
+      <div id="qrcode"></div>
+      <p style="font-size:12px; color:#fff;">Scan this QR to auto-fill your Email</p>
     </div>
-    <div class="chart">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-    <div class="device"></div>
+
+    <!-- Button for scanner -->
+    <button id="openScannerBtn">Scan QR</button>
   </div>
-  <h2></h2>
-  <p><span class="glow">TrustDollar</span>  <span class="glow">deposit USD</span> </p>
-</div>
 
-<!-- Mining Process Section -->
-<div class="section">
-  <h2>Mining Process</h2>
-  <p>Click <span class="glow">Start Mining</span> lets you mine USDT without any setup. Just and start earning BTC automatically using our secure infrastructure</p>
-</div>
+  <div id="popup" class="popup"></div>
 
-<!-- Costs and Earnings -->
-<div class="section">
-  <h2>Costs and Earnings</h2>
-  <p>
-    - Minimum deposit: <span class="glow">$10</span><br>
-    - Daily maintenance fee: <span class="glow">2%</span><br>
-    - Daily profit range: <span class="glow">4% – 7%</span><br>
-    - Withdraw your earnings anytime securely
-  </p>
-</div>
+  <!-- Scanner Popup -->
+  <div id="scannerPopup" class="scanner-popup">
+    <div class="scanner-box" id="reader">
+      <div id="scan-line"></div>
+    </div>
+    <button class="close-scan" id="closeScannerBtn">Close</button>
+  </div>
 
-<!-- CTA Button -->
-<div class="section" style="text-align: center;">
-  <h2>Start Earning Bitcoin Now</h2>
-  <a href="start.html" class="cta">Start Mining</a>
-</div>
+  <!-- Scanner Library -->
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
-<!-- Bottom Navigation Bar -->
-<div class="bottom-nav">
-  <a href="index.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
-  <a href="start.html"><i class="fa-solid fa-play"></i><span>Mining</span></a>
-  <a href="promotion.html"><i class="fa-solid fa-percent"></i><span>Promo</span></a>
-  <a href="wallet.html"><i class="fa-solid fa-wallet"></i><span>Wallet</span></a>
-  <a href="account.html"><i class="fa-solid fa-user"></i><span>Account</span></a>
-</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+    import { 
+      getFirestore, doc, getDocs, collection, query, where, 
+      runTransaction, onSnapshot, addDoc, serverTimestamp 
+    } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
-<!-- Firebase v9 SDK -->
-<script type="module">
-  // Import Firebase SDK v9 modules
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-auth.js";
+    const firebaseConfig = {
+      apiKey:"AIzaSyAswnjTVT4I_vrIShF4PDMluvWWcIwygTA",
+      authDomain:"trustdollar-f72f4.firebaseapp.com",
+      projectId:"trustdollar-f72f4",
+      storageBucket:"trustdollar-f72f4.appspot.com",
+      messagingSenderId:"217643658538",
+      appId:"1:217643658538:web:c8a9cd78467e0818aa0253"
+    };
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAswnjTVT4I_vrIShF4PDMluvWWcIwygTA",
-    authDomain: "trustdollar-f72f4.firebaseapp.com",
-    projectId: "trustdollar-f72f4",
-    storageBucket: "trustdollar-f72f4.appspot.com",
-    messagingSenderId: "217643658538",
-    appId: "1:217643658538:web:c8a9cd78467e0818aa0253"
-  };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+    let currentUser = null;
+    let receiverRef = null;
+    let receiverEmailGlobal = "";
 
-  onAuthStateChanged(auth, user => {
-    if (!user) {
-      window.location.href = "auth.html";
+    const currentUserEmailEl = document.getElementById("currentUserEmail");
+    const currentWalletEl = document.getElementById("currentWallet");
+    const receiverEmailEl = document.getElementById("receiverEmail");
+    const amountEl = document.getElementById("amount");
+    const checkBtn = document.getElementById("checkBtn");
+    const sendBtn = document.getElementById("sendBtn");
+    const popup = document.getElementById("popup");
+
+    function showPopup(message, success=true) {
+      popup.innerText = message;
+      popup.className = success ? "popup success" : "popup error";
+      popup.style.display = "block";
+      setTimeout(()=> popup.style.display="none", 2000);
     }
-  });
-</script>
-  <link rel="preload" href="/fonts/font.woff2" as="font" type="font/woff2" crossorigin />
-<link rel="prefetch" href="/next-page.html" />
 
+    // Loader
+    window.addEventListener("load", () => {
+      document.getElementById("loader").style.display = "none";
+      document.body.classList.add("loaded");
+    });
 
+    // Auth
+    onAuthStateChanged(auth, async (user) => {
+      if(user){
+        currentUser = user;
+        currentUserEmailEl.innerText = `Your Email: ${user.email}`;
+        const senderRef = doc(db, "users", currentUser.uid);
+        onSnapshot(senderRef, (snap)=>{
+          if(snap.exists()){
+            currentWalletEl.innerText = `Your Balance: $${snap.data().wallet.toFixed(2)}`;
+          }
+        });
+        document.getElementById("qrcode").innerHTML = "";
+        new QRCode(document.getElementById("qrcode"), {
+          text: user.email,
+          width: 140,
+          height: 140,
+          colorDark: "#000000",
+          colorLight: "#ffffff",
+          correctLevel: QRCode.CorrectLevel.H
+        });
+      } else {
+        currentUserEmailEl.innerText = "Not Logged In!";
+        currentWalletEl.innerText = "";
+      }
+    });
+
+    // Receiver check
+    checkBtn.addEventListener("click", async () => {
+      const receiverEmail = receiverEmailEl.value.trim();
+      receiverRef = null;
+      receiverEmailGlobal = "";
+      if(!receiverEmail){
+        showPopup("⚠ Please enter a Gmail ID", false);
+        return;
+      }
+      try {
+        const q = query(collection(db, "users"), where("email", "==", receiverEmail));
+        const querySnapshot = await getDocs(q);
+        if(querySnapshot.empty){
+          showPopup("❌ Receiver not found!", false);
+          return;
+        }
+        const receiverDoc = querySnapshot.docs[0];
+        const receiverData = receiverDoc.data();
+        receiverRef = doc(db, "users", receiverDoc.id);
+        receiverEmailGlobal = receiverData.email;
+        if(receiverData.name){
+          showPopup(`✅ Receiver Found (Name: ${receiverData.name})`, true);
+        } else {
+          showPopup("⚠ Receiver found but name missing!", false);
+        }
+      } catch (err) {
+        showPopup("❌ Error: " + err.message, false);
+      }
+    });
+
+    // Send
+    sendBtn.addEventListener("click", async () => {
+      const amount = parseFloat(amountEl.value);
+      if(!receiverRef){
+        showPopup("⚠ Please check receiver first!", false);
+        return;
+      }
+      if(!amount || amount <= 0){
+        showPopup("⚠ Enter valid amount!", false);
+        return;
+      }
+      if(amount < 170){
+        showPopup("⚠ Minimum transfer is $170 (10% fee will apply)", false);
+        return;
+      }
+      sendBtn.disabled = true;
+      checkBtn.disabled = true;
+      sendBtn.innerHTML = `<span class="spinner"></span> Please wait...`;
+      try {
+        await runTransaction(db, async (transaction) => {
+          const senderRef = doc(db, "users", currentUser.uid);
+          const senderSnap = await transaction.get(senderRef);
+          const receiverSnap = await transaction.get(receiverRef);
+          if(!senderSnap.exists()) throw "Sender not found!";
+          if(!receiverSnap.exists()) throw "Receiver not found!";
+          const senderData = senderSnap.data();
+          const receiverData = receiverSnap.data();
+          if(senderData.wallet < amount){
+            throw "Insufficient Balance!";
+          }
+          const fee = amount * 0.10;
+          const netAmount = amount - fee;
+          transaction.update(senderRef, { wallet: senderData.wallet - amount });
+          transaction.update(receiverRef, { wallet: receiverData.wallet + netAmount });
+          await addDoc(collection(db, "transactions"), {
+            sender: senderData.email,
+            receiver: receiverData.email,
+            amount: amount,
+            fee: fee,
+            netAmount: netAmount,
+            timestamp: serverTimestamp()
+          });
+        });
+        showPopup(`✅ Transfer Successful! (10% Fee Cut)`, true);
+        amountEl.value = "";
+        setTimeout(() => { window.location.href = "wallet.html"; }, 1000);
+      } catch (err) {
+        showPopup("❌ " + err, false);
+        sendBtn.disabled = false;
+        checkBtn.disabled = false;
+        sendBtn.innerText = "Send Money";
+      }
+    });
+
+    // Scanner popup
+    const openScannerBtn = document.getElementById("openScannerBtn");
+    const scannerPopup = document.getElementById("scannerPopup");
+    const closeScannerBtn = document.getElementById("closeScannerBtn");
+    let html5QrCode;
+
+    openScannerBtn.addEventListener("click", () => {
+      scannerPopup.style.display = "flex";
+      html5QrCode = new Html5Qrcode("reader");
+      html5QrCode.start(
+        { facingMode: "environment" }, 
+        { fps: 10, qrbox: 250 },
+        qrCodeMessage => {
+          receiverEmailEl.value = qrCodeMessage;
+          showPopup("✅ QR Scanned! Email filled", true);
+          stopScanner();
+        },
+        errorMessage => {}
+      ).catch(err => { showPopup("❌ Camera Error: " + err, false); });
+    });
+
+    closeScannerBtn.addEventListener("click", stopScanner);
+
+    function stopScanner(){
+      if(html5QrCode){
+        html5QrCode.stop().then(() => {
+          html5QrCode.clear();
+          scannerPopup.style.display = "none";
+        }).catch(err => { console.log("Stop failed", err); });
+      } else {
+        scannerPopup.style.display = "none";
+      }
+    }
+  </script>
 </body>
 </html>
